Updated searching, added visualization activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,4 +46,14 @@
         android:onClick="onSettingsButtonClick"
         android:textStyle="bold" />
 
+    <Button
+        android:id="@+id/visualization_button"
+        style="?android:textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/visualization"
+        android:onClick="onVisualizationButtonClick"
+        android:textStyle="bold" />
+
 </LinearLayout>
