Adding visualization and session report layouts and activities.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,4 +56,14 @@
         android:onClick="onVisualizationButtonClick"
         android:textStyle="bold" />
 
+    <Button
+        android:id="@+id/sessionReport_button"
+        style="?android:textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/sessionReport"
+        android:onClick="onSessionReportButtonClick"
+        android:textStyle="bold" />
+
 </LinearLayout>
