Finished adding pie chart to visualization, added testing methods to session class, some minor changes to session report

--- a/app/src/main/res/layout/activity_visualization.xml
+++ b/app/src/main/res/layout/activity_visualization.xml
@@ -10,5 +10,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="widac.cis350.upenn.edu.widac.VisualizationActivity">
 
-
+    <com.github.mikephil.charting.charts.PieChart
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/typesCollectedPieChart"
+        />
 </RelativeLayout>
