SearchActivity title now shows composite key

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:textSize="30pt" />
 
     <EditText
-        android:id="@+id/itemID"
+        android:id="@+id/searchBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/prompt_id"
