--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="chartColor">#FFFFFF</color>
+    <color name="typeA">#FFFFFF</color>
+    <color name="typeB">#FFFFFF</color>
+    <color name="typeC">#FFFFFF</color>
+    <color name="typeD">#FFFFFF</color>
+    <color name="typeE">#FFFFFF</color>
+
 </resources>
