--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -45,6 +45,32 @@
             android:layout_height="wrap_content"
             android:textSize="12pt" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/update_bluetooth"
+                style="?android:textAppearanceSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:onClick="onConnectDeviceButtonClick"
+                android:text="@string/connect_device"
+                android:textStyle="bold"
+                android:layout_weight="75"/>
+            <Button
+                android:id="@+id/update_manual"
+                style="?android:textAppearanceSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:onClick="onPairNewDeviceButtonClick"
+                android:text="@string/pair_device"
+                android:textStyle="bold"
+                android:layout_weight="5"/>
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
