--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -37,14 +37,26 @@
             android:text="Sample Device"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="12pt" />
+            android:textSize="10pt" />
 
         <TextView
             android:text="Sample Database"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="12pt" />
+            android:textSize="10pt" />
 
+        <TextView
+            android:text="Paired Devices"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="12pt"/>
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="225dp"
+            android:id="@+id/paired_devices_list">
+
+        </ListView>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -66,7 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:onClick="onPairNewDeviceButtonClick"
+                android:onClick="onPairDeviceClick"
                 android:text="@string/pair_device"
                 android:textStyle="bold"
                 android:layout_weight="5"/>
