--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -106,17 +106,27 @@
                 android:textStyle="bold"
                 android:layout_weight="75"/>
             <Button
-                android:id="@+id/update_manual"
+                android:id="@+id/reconnect_BT"
                 style="?android:textAppearanceSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:onClick="onUpdateManualButtonClick"
-                android:text="@string/update_manual"
+                android:onClick="onReconnectClick"
+                android:text="Reconnect"
                 android:textStyle="bold"
                 android:layout_weight="5"/>
         </LinearLayout>
->>>>>>> master
+
+        <Button
+            android:id="@+id/update_manual"
+            style="?android:textAppearanceSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:onClick="onUpdateManualButtonClick"
+            android:text="@string/update_manual"
+            android:textStyle="bold"
+            android:layout_weight="5"/>
 
     </LinearLayout>
 
