added working dropdown to MainActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="typeC">#FFFFFF</color>
     <color name="typeD">#FFFFFF</color>
     <color name="typeE">#FFFFFF</color>
+    <color name="white">#FFF</color>
 
 </resources>
