--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,12 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true"
+    tools:context="widac.cis350.upenn.edu.widac.MainActivity">
+
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -7,95 +14,136 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="widac.cis350.upenn.edu.widac.MainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
+
+    <ProgressBar
+        android:id="@+id/progress_bar_main"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="@string/app_name"
         android:textSize="30pt" />
 
-    <LinearLayout
+    <!--<LinearLayout-->
+        <!--android:id="@+id/spinner_container_main"-->
+        <!--android:layout_below="@+id/start_hint"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:weightSum="1">-->
+
+        <!--<widac.cis350.upenn.edu.widac.DBSpinner-->
+            <!--android:id="@+id/area_easting_main"-->
+            <!--android:layout_weight=".25"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@android:drawable/btn_dropdown"-->
+            <!--android:spinnerMode="dropdown" />-->
+
+        <!--<widac.cis350.upenn.edu.widac.DBSpinner-->
+            <!--android:id="@+id/area_northing_main"-->
+            <!--android:layout_weight=".25"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@android:drawable/btn_dropdown"-->
+            <!--android:spinnerMode="dropdown" />-->
+
+        <!--<widac.cis350.upenn.edu.widac.DBSpinner-->
+            <!--android:id="@+id/context_number_main"-->
+            <!--android:layout_weight=".25"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@android:drawable/btn_dropdown"-->
+            <!--android:spinnerMode="dropdown" />-->
+
+        <!--<widac.cis350.upenn.edu.widac.DBSpinner-->
+            <!--android:id="@+id/sample_number_main"-->
+            <!--android:layout_weight=".25"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@android:drawable/btn_dropdown"-->
+            <!--android:spinnerMode="dropdown" />-->
+
+    <!--</LinearLayout>-->
+
+    <widac.cis350.upenn.edu.widac.DBSpinner
+        android:layout_below="@+id/title"
+        android:id="@+id/area_easting_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="1">
+        android:layout_height="50dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown" />
 
-        <Spinner
-            android:id="@+id/area_easting_main"
-            android:layout_weight=".25"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown" />
+    <widac.cis350.upenn.edu.widac.DBSpinner
+        android:id="@+id/area_northing_main"
+        android:layout_below="@+id/area_easting_main"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown" />
 
-        <Spinner
-            android:id="@+id/area_northing_main"
-            android:layout_weight=".25"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown" />
+    <widac.cis350.upenn.edu.widac.DBSpinner
+        android:id="@+id/context_number_main"
+        android:layout_below="@+id/area_northing_main"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown" />
 
-        <Spinner
-            android:id="@+id/context_number_main"
-            android:layout_weight=".25"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown" />
-
-        <Spinner
-            android:id="@+id/sample_number_main"
-            android:layout_weight=".25"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown" />
-
-    </LinearLayout>
+    <widac.cis350.upenn.edu.widac.DBSpinner
+        android:id="@+id/sample_number_main"
+        android:layout_below="@+id/context_number_main"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown" />
 
     <Button
+        android:layout_below="@+id/sample_number_main"
         android:id="@+id/search_button"
         style="?android:textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/search"
-        android:onClick="onSearchButtonClick"
         android:textStyle="bold" />
 
     <Button
+        android:layout_below="@+id/search_button"
         android:id="@+id/settings_button"
         style="?android:textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="@string/settings"
-        android:onClick="onSettingsButtonClick"
         android:textStyle="bold" />
 
     <Button
+        android:layout_below="@+id/settings_button"
         android:id="@+id/visualization_button"
         style="?android:textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="@string/visualization"
-        android:onClick="onVisualizationButtonClick"
         android:textStyle="bold" />
 
     <Button
+        android:layout_below="@+id/visualization_button"
         android:id="@+id/sessionReport_button"
         style="?android:textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="@string/sessionReport"
-        android:onClick="onSessionReportButtonClick"
         android:textStyle="bold" />
 
-</LinearLayout>
+</RelativeLayout>
+</ScrollView>
