--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:focusableInTouchMode="true">
 
     <ProgressBar
         android:id="@+id/progress_bar_main"
@@ -34,53 +35,21 @@
         android:text="@string/app_name"
         android:textSize="30pt" />
 
-    <!--<LinearLayout-->
-        <!--android:id="@+id/spinner_container_main"-->
-        <!--android:layout_below="@+id/start_hint"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:weightSum="1">-->
-
-        <!--<widac.cis350.upenn.edu.widac.DBSpinner-->
-            <!--android:id="@+id/area_easting_main"-->
-            <!--android:layout_weight=".25"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@android:drawable/btn_dropdown"-->
-            <!--android:spinnerMode="dropdown" />-->
-
-        <!--<widac.cis350.upenn.edu.widac.DBSpinner-->
-            <!--android:id="@+id/area_northing_main"-->
-            <!--android:layout_weight=".25"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@android:drawable/btn_dropdown"-->
-            <!--android:spinnerMode="dropdown" />-->
-
-        <!--<widac.cis350.upenn.edu.widac.DBSpinner-->
-            <!--android:id="@+id/context_number_main"-->
-            <!--android:layout_weight=".25"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@android:drawable/btn_dropdown"-->
-            <!--android:spinnerMode="dropdown" />-->
-
-        <!--<widac.cis350.upenn.edu.widac.DBSpinner-->
-            <!--android:id="@+id/sample_number_main"-->
-            <!--android:layout_weight=".25"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@android:drawable/btn_dropdown"-->
-            <!--android:spinnerMode="dropdown" />-->
-
-    <!--</LinearLayout>-->
+    <TextView
+        android:layout_marginTop="10dp"
+        android:id="@+id/db_input_hint"
+        android:layout_below="@id/title"
+        android:text="Select value from database:"
+        android:textSize="18dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <widac.cis350.upenn.edu.widac.DBSpinner
-        android:layout_below="@+id/title"
+        android:layout_below="@+id/db_input_hint"
         android:id="@+id/area_easting_main"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_height="40dp"
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown" />
 
@@ -88,7 +57,7 @@
         android:id="@+id/area_northing_main"
         android:layout_below="@+id/area_easting_main"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown" />
 
@@ -96,7 +65,7 @@
         android:id="@+id/context_number_main"
         android:layout_below="@+id/area_northing_main"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown" />
 
@@ -104,12 +73,67 @@
         android:id="@+id/sample_number_main"
         android:layout_below="@+id/context_number_main"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown" />
 
+    <TextView
+        android:layout_marginTop="10dp"
+        android:id="@+id/custom_input_hint"
+        android:layout_below="@id/sample_number_main"
+        android:text="Or Enter Your Own: (Takes Precedence)"
+        android:textSize="18dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:id="@+id/custom_input_container"
+        android:layout_below="@+id/custom_input_hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1">
+
+        <EditText
+            android:hint="AE"
+            android:id="@+id/area_easting_custom"
+            android:layout_below="@id/sample_number_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25"
+            android:inputType="number"/>
+
+        <EditText
+            android:hint="AN"
+            android:id="@+id/area_northing_custom"
+            android:layout_below="@id/sample_number_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25"
+            android:inputType="number"/>
+
+        <EditText
+            android:hint="CN"
+            android:id="@+id/context_number_custom"
+            android:layout_below="@id/sample_number_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25"
+            android:inputType="number"/>
+
+        <EditText
+            android:hint="SN"
+            android:id="@+id/sample_number_custom"
+            android:layout_below="@id/sample_number_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25"
+            android:inputType="number"/>
+
+    </LinearLayout>
+
     <Button
-        android:layout_below="@+id/sample_number_main"
+        android:layout_below="@+id/custom_input_container"
         android:id="@+id/search_button"
         style="?android:textAppearanceSmall"
         android:layout_width="match_parent"
